create classes driver and cars
create classes driver and cars

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,6 @@ hs_err_pid*
 /JavaApplication52/nbproject/private/
 /BookAuthorClassesExample/nbproject/private/
 /BookAuthorClassesExample/build/
+/Cars ans driver example/nbproject/private/
+/Cars ans driver example/dist/
+/Cars ans driver example/build/
