--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,4 @@ hs_err_pid*
 /Cars ans driver example/nbproject/private/
 /Cars ans driver example/dist/
 /Cars ans driver example/build/
+/StringExample/nbproject/private/
