--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,8 @@ hs_err_pid*
 /Cars ans driver example/dist/
 /Cars ans driver example/build/
 /StringExample/nbproject/private/
+/MyMathFunctionsTester/nbproject/private/
+/MyJavaLibrary/nbproject/private/
+/MyJavaLibrary/dist/
+/MyJavaLibrary/build/
+/JavaLibrary3/nbproject/private/
