--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,9 @@ hs_err_pid*
 /MyMathLibrary/build/
 /MyMathLibrary/dist/
 /MyMasthLIbraryTester/dist/
+/StringSumDigits/nbproject/private/
+/StringExample/build/
+/StringSumDigits/build/
+/StringWordsTester/nbproject/private/
+/StringWordsTester1/nbproject/private/
+/StringWordsTester1/build/
