--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,10 @@ hs_err_pid*
 /StringWordsTester/nbproject/private/
 /StringWordsTester1/nbproject/private/
 /StringWordsTester1/build/
+/StringCW1/nbproject/private/
+/StringCW1/build/
+/StringCW1/dist/
+/txtfiletester/nbproject/private/
+/LoginFrameTester/nbproject/private/
+/LoginFrameTester/build/
+/LoginFrameTester/dist/
