--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@ hs_err_pid*
 /LoginFrameTester/nbproject/private/
 /LoginFrameTester/build/
 /LoginFrameTester/dist/
+/FileTxtTest/nbproject/private/
+/FileTxtTest/build/
+/FileTxtTest/dist/
